# Dawnshard

./: .csharpierignore  .csharpierrc  .dockerignore  .editorconfig  .env  .env.default  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  DragaliaAPI.Linux.slnf  DragaliaAPI.sln  DragaliaAPI.sln.DotSettings  DragaliaAPI.sln.startup.json  DragaliaAPI.slnx  LICENSE  README.md  docker-compose-nginx.yaml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  docker-stack.yaml  index(7)  launchSettings.json  nginx.conf  nuget.config  set tutorial status.sql  snippet.snippet  view party.sql
.config/: dotnet-tools.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.husky/: pre-commit  task-runner.json
AppHost/: AppHost.csproj  Program.cs
Aspire/: Directory.Build.props
Dawnshard.AppHost/: Program.cs  appsettings.json
DragaliaAPI.Database/: ApiContext.cs  ApiContextFactory.cs  ConfigureDatabase.cs  (+4 more)
DragaliaAPI.Database.Test/: DbTestFixture.cs  DragaliaAPI.Database.Test.csproj  Usings.cs
MaintenanceWorker/: Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
MaintenanceWorker/src/: helper.rs  lib.rs
MaintenanceWorker/src/game/: mod.rs
MaintenanceWorker/src/shared/: mod.rs
MaintenanceWorker/src/web/: mod.rs  page.html
MaintenanceWorker/test/: env.d.ts  worker.test.ts
MaintenanceWorker/test/__snapshots__/: worker.test.ts.snap
Website/: .env  (+21 more)
(+4174 files in other folders)
