[package]
name = "maintenance-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Jay Malhotra <jay0@me.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.7.2", features=['http', 'axum'] }
serde = { version = "1.0.219", default-features = false }
time = { version="0.3.44", features=['parsing','macros','formatting'] }
rmp-serde =  { version = "1.3.1", default-features = false }
